--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -152,7 +152,7 @@ $form-search-indicator-position: left 10px center !default;
 
 .form-control {
     padding: 8px 16px;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 400;
     background-color: #fff;
     border: 1px solid #7c8b90;
@@ -185,7 +185,7 @@ $form-search-indicator-position: left 10px center !default;
     background-position: right 10px center;
     background-size: 24px 24px;
     padding: 8px 34px 8px 16px;
-    font-size: 1rem;
+    font-size: 1em;
     color: $gray-tint11;
     &.search {
         background-image: escape-svg($form-search-indicator), escape-svg($form-select-indicator) !important;
@@ -591,7 +591,7 @@ input.form-radio-input {
         border: 1px solid #7c8b90;
         outline: 0;
         padding: 0 16px;
-        font-size: 18px;
+        font-size: 1em;
         width: 100%;
         color: #404b4f;
         text-align: left;
