--- a/app/frontend/assets/styles/components/_list-incidents.scss
+++ b/app/frontend/assets/styles/components/_list-incidents.scss
@@ -23,7 +23,7 @@
             align-items: center;
             justify-content: center;
             height: 32px;
-            font-size: 12px;
+            font-size: 0.666em;
             min-height: 0;
             font-weight: 300;
             line-height: 12px;
