--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -5,7 +5,7 @@
     border: 1px solid transparent;
     border-radius: 0;
     display: flex;
-    font-size: 1rem;
+    font-size: 1em;
 
     svg {
         padding-right: $input-padding-x;
