--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -102,7 +102,7 @@ textarea {
     min-height: 48px;
     line-height: 24px;
     font-family: "Bolder", sans-serif;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 700;
     margin-bottom: 0.5rem;
 
