--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -142,7 +142,7 @@
         .content {
             position: relative;
             margin-bottom: 20px;
-            font-size: 16px;
+            font-size: 0.875em;
             text-align: right;
             display: flex;
             justify-content: flex-end;
