--- a/app/frontend/assets/styles/components/_tabs.scss
+++ b/app/frontend/assets/styles/components/_tabs.scss
@@ -11,7 +11,7 @@
         display: inline-block;
         width: auto;
         background-color: transparent;
-        font-size: 16px;
+        font-size: 0.875em;
         font-weight: normal;
         padding: 12px 4px;
         color: $gray-tint11;
