css fix select2 to wide

--- a/app/apps/main/templates/melding/part_taak_afronden.html
+++ b/app/apps/main/templates/melding/part_taak_afronden.html
@@ -2,7 +2,7 @@
 {% load vind_in_dict from querystring_tags %}
 {% load json_encode from json_tags %}
 <turbo-frame id="melding_actie_form">
-<div class="modal-dialog modal-dialog--small">
+<div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <h1>
