--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -11,7 +11,7 @@
     {% render_bundle 'app' 'js' %}
 {% endblock javascripts %}
 <turbo-frame id="melding_actie_form">
-<div class="modal-dialog modal-dialog--small">
+<div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <h1>
