--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -18,7 +18,7 @@
         text-decoration: none;
 
         svg {
-            vertical-align: bottom;
+            vertical-align: text-bottom;
         }
 
         &:hover,
