--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -24,6 +24,11 @@
         &:hover,
         &:focus {
             color: $green-tint01;
+            svg {
+                path {
+                    fill: $green-tint01;
+                }
+            }
         }
     }
 }
