--- a/app/apps/main/templates/melding/part_taak_afronden.html
+++ b/app/apps/main/templates/melding/part_taak_afronden.html
@@ -22,7 +22,7 @@
                       data-turbo-frame="_top"
                       enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{ form.taakopdracht|render_rotterdam_formulier }}
+                    <div data-controller="select2Modal">{{ form.taakopdracht|render_rotterdam_formulier }}</div>
                     {{ form.resolutie|render_rotterdam_formulier }}
                     <div data-controller="bijlagen">{{ form.bijlagen|render_rotterdam_formulier }}</div>
                     <div class="form-control__with-helptext">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
