prevent render ul for locaties

--- a/app/apps/main/templates/melding/melding_detail_locaties_graven.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_graven.html
@@ -1,5 +1,7 @@
-<ul class="list-clean">
-    {% for locatie in locaties %}
-        {% include "melding/melding_detail_locaties_graf.html" %}
-    {% endfor %}
-</ul>
+{% if locaties %}
+    <ul class="list-clean">
+        {% for locatie in locaties %}
+            {% include "melding/melding_detail_locaties_graf.html" %}
+        {% endfor %}
+    </ul>
+{% endif %}
