--- a/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
@@ -1,24 +1,26 @@
-<ul class="list-clean">
-    <li>
-        <div class="display--flex--md">
-            <ul class="list-clean">
-                <li>
-                    <h3 class="h5">
-                        Lichtmast
-                        {% if locaties|length > 1 %}
-                            nummers
-                        {% else %}
-                            nummer
-                        {% endif %}
-                    </h3>
-                    <p>
-                        {% for locatie in locaties %}
-                            {{ locatie.lichtmast_id }}
-                            {% if not forloop.last %},{% endif %}
-                        {% endfor %}
-                    </p>
-                </li>
-            </ul>
-        </div>
-    </li>
-</ul>
+{% if locaties %}
+    <ul class="list-clean">
+        <li>
+            <div class="display--flex--md">
+                <ul class="list-clean">
+                    <li>
+                        <h3 class="h5">
+                            Lichtmast
+                            {% if locaties|length > 1 %}
+                                nummers
+                            {% else %}
+                                nummer
+                            {% endif %}
+                        </h3>
+                        <p>
+                            {% for locatie in locaties %}
+                                {{ locatie.lichtmast_id }}
+                                {% if not forloop.last %},{% endif %}
+                            {% endfor %}
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </li>
+    </ul>
+{% endif %}
