--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -1,4 +1,5 @@
 // grijstinten
+$gray-tint00: #f6f9fa;
 $gray-tint01: #eff4f6;
 $gray-tint02: #e4eef1;
 $gray-tint03: #dbe7ea;
@@ -15,6 +16,7 @@ $gray-tint11: #404b4f;
 $green-tint01: #00811f;
 $green-tint02: #006e32;
 $green-tint03: #006e32;
+$green-tint04: #ebf5ed;
 
 //badges, beetje vreemde kleuren, nog niet elders tegengekomen
 $blue-light: #0079b8;
