--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -24,3 +24,4 @@
 @import "./components/tabs";
 @import "./components/messages";
 @import "./components/change-location";
+@import "./components/dashboard";
